# critchecker

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
critchecker/: cache.py  cli.py  client.py  comment.py  critique.py  database.py  deviation.py  network.py
src/critchecker/: database.py
tests/: strategies.py  test_cache.py  test_client.py  test_comment.py  test_database.py  test_deviation.py  test_network.py
