[project]
name = "critchecker"
version = "2.0.1"
description = "Extract and measure the length of DeviantArt Critmas critiques."
authors = [
    {name = "Nemris", email = "nemris@protonmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm (>=4.66.5,<5.0.0)",
    "sundown @ git+https://github.com/Nemris/sundown@v0.1.0",
]

[project.scripts]
critchecker = "critchecker.cli:wrapper"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pylint = "^3.3.0"
hypothesis = "^6.112.1"
black = "^24.8.0"


[tool.poetry.dependencies]
sundown = {develop = true}
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
