[project]
name = "critchecker"
version = "2.0.1"
description = "Extract and measure the length of DeviantArt Critmas critiques."
authors = [
    {name = "Nemris", email = "nemris@protonmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "sundown @ git+https://github.com/Nemris/sundown@v0.1.0",
]

[project.scripts]
critchecker = "critchecker.cli:wrapper"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
pytest = "^9.0.2"
hypothesis = "^6.150.1"
black = "^25.12.0"


[tool.poetry.dependencies]
sundown = {develop = true}
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
